--- a/imports/stylesheets/pages/main/includes/_sideBlocks.scss
+++ b/imports/stylesheets/pages/main/includes/_sideBlocks.scss
@@ -1,3 +1,5 @@
+$menu-border: 1px solid #BCBCBC;
+
 aside {
   display: flex;
   max-width: 50vw;
@@ -33,6 +35,7 @@ aside {
       background-color: white;
       border-top: 1px solid #BCBCBC;
       top: 160px;
+      z-index: 1;
       > li {
         list-style: none;
         cursor: pointer;
@@ -43,8 +46,7 @@ aside {
         padding-left: 15px;
         color: #999999;
         font-size: 16px;
-        border-bottom: 1px solid #BCBCBC;
-        font-family: "panton", serif;
+        border-bottom: $menu-border;
         &:last-child {
           border-bottom: none;
         }
@@ -60,10 +62,16 @@ aside {
 #left > .panel-container > .menu {
   right: 0;
   text-align: right;
+  border-left: $menu-border;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 #right > .panel-container > .menu {
   left: 0;
+  border-right: $menu-border;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 @mixin small-stripe() {
@@ -110,6 +118,10 @@ aside.expand {
   overflow: hidden;
 }
 
+.panel-block .messages {
+  height: calc(100% - 112px);
+}
+
 .expand .panel-block {
   flex: 1;
   display: flex;
@@ -117,20 +129,17 @@ aside.expand {
 
 .panel-bar {
   background-color: #e0e0e0;
+  line-height: 24px;
+  text-align: right;
+  > * {
+    cursor: pointer;
+    margin-right: 6px;
+  }
 }
 
 .panel-content {
   height: 100%;
   flex: 1;
-}
-
-.player {
-  ul {
-    padding-left: 0;
-    li {
-      list-style: none;
-    }
-  }
 }
 
 .player.audio {
