--- a/imports/stylesheets/pages/main/_main.scss
+++ b/imports/stylesheets/pages/main/_main.scss
@@ -30,6 +30,7 @@ $user-menu-border-color: #ddddde;
 #central {
   max-width: 1100px;
   overflow-y: auto;
+  flex: 1;
   > * {
     width: inherit;
     max-width: none;
