--- a/imports/stylesheets/pages/main/_main.scss
+++ b/imports/stylesheets/pages/main/_main.scss
@@ -38,8 +38,13 @@ $user-menu-border-color: #ddddde;
   }
 }
 
+@media (min-width: 769px) {
+  main {
+    margin-top: -220px;
+  }
+}
+
 main {
-  margin-top: -220px;
   .user-block {
     padding: 0 40px;
   }
