--- a/imports/stylesheets/common.scss
+++ b/imports/stylesheets/common.scss
@@ -108,7 +108,7 @@ header textarea {
 #central {
   @media (orientation: landscape) {
     @media (min-width: 500px) {
-      .scroll {
+      .list .scroll {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
@@ -205,6 +205,8 @@ header textarea {
 
 .unavailable {
   background: url("/images/unavailable.jpg") no-repeat center;
+  width: 100%;
+  height: 100%;
 }
 
 #alert-queue {
@@ -217,4 +219,9 @@ header textarea {
     border-radius: 0;
     margin-bottom: 0;
   }
+}
+
+.avatar {
+  background-position: center;
+  background-repeat: no-repeat;
 }
