--- a/imports/stylesheets/common.scss
+++ b/imports/stylesheets/common.scss
@@ -284,7 +284,7 @@ header {
   $border: 1px solid #e0e0e0;
   display: flex;
   align-items: center;
-  padding: 6px 0;
+  padding: 6px 2px 6px 8px;
   width: 100%;
   border-bottom: $border;
   &:first-child {
@@ -305,6 +305,11 @@ header {
 .avatar.small {
   width: 60px;
   height: 60px;
+}
+
+.avatar.middle {
+  width: 130px;
+  height: 130px;
 }
 
 .edit-chat {
