--- a/imports/stylesheets/common.scss
+++ b/imports/stylesheets/common.scss
@@ -27,9 +27,9 @@
 }
 
 .busy-animation {
-  background: url("/images/busy.gif") center no-repeat;
-  min-height: 64px;
-  min-width: 64px;
+  background: url("/images/busy.gif") center no-repeat white;
+  min-height: 96px;
+  min-width: 96px;
 }
 
 #central > .busy-animation {
