--- a/imports/stylesheets/common.scss
+++ b/imports/stylesheets/common.scss
@@ -104,7 +104,7 @@ header {
 .list {
   height: 100%;
   .scroll {
-    height: 100%;
+    max-height: 100%;
   }
 }
 
@@ -246,45 +246,54 @@ header {
 }
 
 .editor {
-  display: flex;
-  align-items: center;
-  padding: 8px 0;
-  > * {
-    margin-left: 8px;
-  }
-  textarea {
-    flex: 1;
-    border-color: transparent;
-  }
-  [for="file"] {
-    position: relative;
-    display: block;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    cursor: pointer;
-    div.icon {
-      margin: auto;
+  form {
+    display: flex;
+    align-items: center;
+    padding: 8px 0;
+    > * {
+      margin-left: 8px;
     }
-    input {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
+    textarea {
+      flex: 1;
+      border-color: transparent;
+    }
+    [for="file"] {
+      position: relative;
+      display: block;
+      width: 30px;
+      height: 30px;
+      text-align: center;
+      cursor: pointer;
+      div.icon {
+        margin: auto;
+      }
+      input {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
+    }
+    [type="submit"] {
+      background-color: #3892cd;
+      border: none;
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      margin-top: -6px;
+      margin-right: 8px;
+      .icon {
+        margin-top: 8px;
+        margin-left: 5px;
+      }
     }
   }
-  [type="submit"] {
-    background-color: #3892cd;
-    border: none;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    margin-top: -6px;
-    margin-right: 8px;
-    .icon {
-      margin-top: 8px;
-      margin-left: 5px;
+
+  .emoji-bar {
+    font-size: 18px;
+    > span {
+      padding: 0 4px;
     }
   }
 }
@@ -334,4 +343,17 @@ header {
       height: 100%;
     }
   }
+}
+
+.attachment-bar {
+  display: flex;
+  .menu > * {
+    display: block;
+    font-size: 24px;
+    margin-bottom: 8px;
+  }
+}
+
+.attachment-widget {
+  flex: 1;
 }
