--- a/imports/stylesheets/common.scss
+++ b/imports/stylesheets/common.scss
@@ -352,8 +352,24 @@ header {
     font-size: 24px;
     margin-bottom: 8px;
   }
+  .glyphicon {
+    opacity: 0.4;
+    transition: opacity 600ms;
+    margin-right: 10px;
+    &.active {
+      opacity: 0.9;
+      transition: opacity 300ms;
+    }
+  }
 }
 
 .attachment-widget {
   flex: 1;
+}
+
+ul.list {
+  padding-left: 0;
+  li {
+    list-style: none;
+  }
 }
