--- a/imports/stylesheets/pages/main/includes/_news.scss
+++ b/imports/stylesheets/pages/main/includes/_news.scss
@@ -128,13 +128,14 @@
       max-width: 340px;
       border-radius: 5px;
       overflow: hidden;
-      > span {
+      > * {
         font-size: 13px;
         width: 100%;
         background-color: #eceff4;
         color: #c7c7c7;
         text-align: center;
         line-height: 35px;
+        text-decoration: none;
         &:nth-child(even) {
           border-right: 1px solid #fff;
           border-left: 1px solid #fff;
