--- a/imports/stylesheets/main.scss
+++ b/imports/stylesheets/main.scss
@@ -48,3 +48,4 @@ html, body {
 @import "pages/main/includes/modals";
 @import "pages/main/includes/sideBlocks";
 @import "pages/main/media";
+@import "common";
