--- a/imports/stylesheets/pages/main/includes/_messenger.scss
+++ b/imports/stylesheets/pages/main/includes/_messenger.scss
@@ -493,7 +493,7 @@ aside .dialogs {
     background-color: #eceff4;
     flex: 1;
     padding-left: 12px;
-    border-color: #eceff4;
+    border: 0 solid #eceff4;
   }
   button {
     background-color: #e0e0e0;
