fix: signup css

--- a/meteor/imports/stylesheets/login.scss
+++ b/meteor/imports/stylesheets/login.scss
@@ -1,4 +1,4 @@
-@import './includes/auth-footer';
+@import './includes/auth';
 
 // Styles
 #login-page {
@@ -35,12 +35,18 @@
 }
 
 @media (min-width: 769px) {
-  #login-page main {
-    padding-top: 12px;
-    padding-left: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  #login-page {
+    main {
+      padding-top: 12px;
+      padding-left: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    form.login {
+      box-shadow: 0 4px 5px rgba(0, 0, 0, .1);
+    }
   }
 
   #welcome {
@@ -50,13 +56,10 @@
   }
 
   form.login {
-    display: flex;
-    flex-direction: row;
     padding: 20px;
     background-color: hsla(0, 0%, 100%, .2);
     border: 1px solid hsla(0, 0%, 100%, .4);
     border-radius: 5px;
-    box-shadow: 0 4px 5px rgba(0, 0, 0, .1);
 
     [type="submit"] {
       height: 34px;
@@ -92,11 +95,19 @@
 
 @media (max-height: 800px) {
   footer {
-    margin-bottom: -180px;
+    bottom: -280px;
   }
 }
 
 @media (max-width: 768px) {
+  #signup-page form.login {
+    padding: 16px;
+    input, button {
+      margin-right: 8px;
+      margin-bottom: 8px;
+    }
+  }
+
   .auth {
     footer {
       display: none;
@@ -125,7 +136,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        @include large-login-button()
+        @include large-login-button();
       }
     }
 
@@ -168,6 +179,9 @@
 }
 
 form.login {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   .credentials input, button {
     border: 1px solid #ccc;
     padding: 6px 12px;
