--- a/meteor/imports/stylesheets/signup.scss
+++ b/meteor/imports/stylesheets/signup.scss
@@ -11,6 +11,12 @@
 
   min-height: 100vh;
 
+  form.login {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
   h1 {
     color: $blue;
     font-size: 28px;
