fix: tiles upload

--- a/meteor/imports/stylesheets/common.scss
+++ b/meteor/imports/stylesheets/common.scss
@@ -422,3 +422,7 @@ ul.list {
 //footer {
 //  margin-bottom: -300px !important;
 //}
+
+#desktop .blog .user-container .posts {
+  padding-bottom: 400px;
+}
