--- a/meteor/imports/stylesheets/common.scss
+++ b/meteor/imports/stylesheets/common.scss
@@ -437,6 +437,10 @@ ul.list {
   }
 }
 
+@mixin thumb() {
+
+}
+
 .message-attachment-list, .attachment-list {
   .thumb {
     width: 128px;
@@ -445,4 +449,72 @@ ul.list {
     background-repeat: no-repeat;
     background-position: center;
   }
+}
+
+.message-attachment-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.attachment-widget .photos .thumb {
+  width: 96px;
+  height: 96px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.attachment-image, .attachment-video {
+  order: -1;
+  padding: 0 4px 8px;
+}
+
+.attachment-image {
+}
+
+.attachment-video {
+  text-align: center;
+  padding: 36px;
+  &:before {
+    width: 100%;
+    height: 100%;
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 56px;
+  }
+}
+
+.video-player-container > * {
+  width: 100%;
+  min-height: 30vh;
+}
+
+#central .video-player-container > * {
+  min-height: 50vh;
+}
+
+.visual-background {
+}
+
+@media (min-width: 981px) {
+  .visual-background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    > div {
+      margin: 32px auto 128px;
+      max-width: 980px;
+      background-color: white;
+    }
+  }
+}
+
+@media (max-width: 980px) {
+ .visual-background > div {
+   margin: auto;
+ }
 }
