fix: mobile layout

--- a/meteor/imports/stylesheets/common.scss
+++ b/meteor/imports/stylesheets/common.scss
@@ -523,6 +523,8 @@ ul.list {
   padding-left: 4px;
   padding-top: 4px;
   .action {
+    padding-left: 6px;
+    padding-right: 12px;
     font-style: italic;
   }
 }
